<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_first_fragment"
        app:layout_constraintBottom_toTopOf="@id/main_linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/main_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first" >

        <Button
            android:id="@+id/home_first"
            android:layout_width="180dp"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:text="@string/home_launch"
            />
        <Button
            android:id="@+id/profile_first"
            android:layout_height="wrap_content"
            android:text="@string/profile_launch"
            android:layout_width="180dp"
            android:layout_gravity="center"
            android:textSize="14sp"/>
        <Button
            android:id="@+id/about_first"
            android:layout_width="180dp"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/about_launch"
            />

        <TextView
            android:id="@+id/change_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_change"
            app:layout_constraintBottom_toTopOf="@id/main_linear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:id="@+id/english_btn"
                android:layout_width="120dp"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:text="English"
                />
            <Button
                android:id="@+id/dutch_btn"
                android:layout_height="wrap_content"
                android:text="Danish"
                android:layout_marginLeft="20dp"
                android:layout_width="120dp"
                android:layout_gravity="center"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>